# demo_sa

./: .env.example  .gitignore  OUTPUT_Q1.md  OUTPUT_Q1_PHASE2.md  Packaging Ampoules.xlsx  Production Planning & Scheduling overview EN.pptx  README.md  analyze_packaging_data.py  pyproject.toml  requirements.txt
catalog/constraints/: C-001-one-format-per-cycle.yaml  C-002-demand-fulfilment.yaml  C-003-order-machine-eligibility.yaml  C-004-vol-link.yaml  C-005-org-no-split.yaml  C-007-farcon-xor-dividella.yaml  C-008-changeover-team-cpsat.yaml  C-008a-changeover-link.yaml  C-008b-changeover-team-hours.yaml  C-009-prod-pack-lag.yaml  C-011-one-api-per-week.yaml  C-012-prod-total.yaml  C-013-shelf-life-storage.yaml  C-014-evaton-gap.yaml  C-015-capacity-hours.yaml  C-037-piramal-band.yaml
configs/: defaults.yaml
demo_scheduler/: __main__.py  cli.py
demo_scheduler/agents/: __init__.py  constraint_elicitation.py  disruption.py  explanation.py  infeasibility.py  llm.py  schedule_generation.py  (+2 more)
docs/: EMAIL_FOLLOWUP.md  EMAIL_SUMMARY.md  MODEL_SCOPING.md  PHASE2_PLAN.md  PROBLEM_AND_APPROACH.md  PROPOSED_SOLUTION_ARCH.md  README.md  SOLVER_AGENT_ARCHITECTURE.md  STARTER_EMAIL.md
outputs/: demand_by_country.csv  demand_by_format.csv  demand_by_packaging_line.csv  demand_by_quarter.csv  demand_by_sku.csv  isd_forecast_totals.csv  machine_pivot_FARCON-DIVIDELLA.csv  machine_pivot_Marchesini.csv  machine_pivot_Partena.csv  machine_pivot_totals.csv  piramal_monthly_check.csv  rating_final_factor.csv  rating_vip.csv  sheet_profiles.txt
scripts/: run_all_quarters.py
(+34 files in other folders)
